<?xml version="1.0" encoding="utf-8"?>
<com.example.news.util.widget.NewsConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.list.ArticleListFragment">

    <com.example.news.util.widget.NewsTextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/bg_appbar"
        android:paddingHorizontal="@dimen/dp_8"
        android:paddingVertical="@dimen/dp_4"
        android:text="@string/latest_news"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:newsFontFamily="extraBold" />

    <com.example.news.util.widget.NewsImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:src="@drawable/notification"
        app:layout_constraintEnd_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="@+id/tvAppTitle" />

    <com.example.news.util.widget.NewsEditText
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:background="@drawable/bg_search_rounded"
        android:drawableEnd="@drawable/ic_search"
        android:gravity="center_vertical"
        android:focusable="false"
        android:hint="@string/search_hint"
        android:textSize="@dimen/sp_12"
        android:paddingHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNewsList"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/news_1877F2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/news_000000"
            tools:text="Something went wrong" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/retry"
            app:backgroundTint="@color/news_1877F2" />
    </LinearLayout>

</com.example.news.util.widget.NewsConstraintLayout>
